<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.a.sync.mvvm.viewmodel.SyncSimpleViewModel" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_sync_simple_create_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="#cccccc"
            android:gravity="center"
            android:onClick="@{onClickListener}"
            android:padding="10dp"
            android:text="@string/sync_simple_create_qr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sync_scan_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="#cccccc"
            android:gravity="center"
            android:onClick="@{onClickListener}"
            android:padding="10dp"
            android:text="@string/sync_simple_scan_qr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sync_simple_create_qr" />

        <TextView
            android:id="@+id/tv_sync_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="#cccccc"
            android:gravity="center"
            android:onClick="@{onClickListener}"
            android:padding="10dp"
            android:text="@string/sync_simple_send_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sync_scan_qr" />
        <TextView
            android:id="@+id/tv_sync_list_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="#cccccc"
            android:gravity="center"
            android:onClick="@{onClickListener}"
            android:padding="10dp"
            android:text="@string/sync_simple_connection_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sync_send_message" />

        <TextView
            android:id="@+id/tv_sync_play_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="#cccccc"
            android:gravity="center"
            android:onClick="@{onClickListener}"
            android:padding="10dp"
            android:text="@string/sync_simple_play_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sync_list_message" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>